consectando o banco localhost na api e com as seguintes tabelas para guardar dados de cliente e livro

--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "test": "jest",
     "start": "node app.js"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.3"
   }
 }
-
